--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,14 @@ datasette/
 
 hosts.json
 db/
+
+*.swp
+package-lock.json
+__pycache__
+.pytest_cache
+.env
+*.egg-info
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
